Move Barbs website location under its own path

--- a/html/templates/api.html
+++ b/html/templates/api.html
@@ -20,7 +20,7 @@
 <div class="grid-container">
     <div id="sidebar" class="sidenav">
         <a href="#Foreword">Foreword</a>
-        <a href="/">Barbs Rulebook</a>
+        <a href="/Barbs/Rulebook">Barbs Rulebook</a>
         <a href="#Character Sheet">Character Sheet</a>
         <a href="#General">General</a>
         <div class="sidenav-subsection">
@@ -500,7 +500,7 @@
 
                 <li>Condition-specific Resistance - <span class="monospace">&lt;condition&gt; cr: &lt;bonus&gt;</span>
                     <ul>
-                        <li>"condition" is one of the <a href="/#Conditions">conditions</a> listed in the rulebook. Capitalization does not matter. Parenthesis in the condition name do not matter.</li>
+                        <li>"condition" is one of the <a href="/Barbs/Rulebook#Conditions">conditions</a> listed in the rulebook. Capitalization does not matter. Parenthesis in the condition name do not matter.</li>
                         <li>"cr" can be expanded to "condition resist", if you prefer</li>
                         <li>"bonus" is the bonus you get to CR rolls against this condition, e.g. 20</li>
                     </ul>
@@ -569,7 +569,7 @@
 
                 <li>Skill bonuses - <span class="monospace">&lt;skill name&gt;: &lt;bonus&gt;</span>
                     <ul>
-                        <li>"skill name" is one of the <a href="/#Skills">skills</a> listed in the rulebook. Capitalization does not matter, but punctuation (namely the colon in skill names) should stay the same.</li>
+                        <li>"skill name" is one of the <a href="/Barbs/Rulebook#Skills">skills</a> listed in the rulebook. Capitalization does not matter, but punctuation (namely the colon in skill names) should stay the same.</li>
                         <li>"bonus" is the bonus you get to this skill, e.g. 20</li>
                     </ul>
                     <br>
@@ -733,7 +733,7 @@
                 <li><span class="monospace">!barbs cr $&lt;character_name&gt;$ &lt;condition&gt;</span></li>
             </ul>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;The "condition" should be one of the
-                <a href="/#Conditions">conditions listed in the rulebook</a>. If you are not resisting a particular
+                <a href="/Barbs/Rulebook#Conditions">conditions listed in the rulebook</a>. If you are not resisting a particular
                 condition, this field should be "General".</p>
             <br>
 
@@ -751,7 +751,7 @@
                 <li><span class="monospace">!barbs skill $&lt;character_name&gt;$ &lt;skill name&gt; &lt;AP in the skill&gt;</span></li>
             </ul>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;The "skill name" field should be one of the Skills listed in the
-                <a href="/#Skills">rulebook</a>.
+                <a href="/Barbs/Rulebook#Skills">rulebook</a>.
                 Spaces in the skill name are fine. Capitalization does not matter. The "AP in the skill" field should
                 be the number of AP you have invested into this skill. This is NOT your rank or bonus (though rank has
                 a 1-1 relationship with AP investment).</p>
