--- a/html/templates/calendar_month.html
+++ b/html/templates/calendar_month.html
@@ -19,17 +19,17 @@
 
 <div class="grid-container">
     <div id="sidebar" class="sidenav">
-        <a href="/">Barbs Rulebook</a>
-        <a href="/#Calendar">Calendar</a>
+        <a href="/Barbs/Rulebook">Barbs Rulebook</a>
+        <a href="/Barbs/Rulebook#Calendar">Calendar</a>
         <div class="sidenav-subsection">
-            <a href="/calendar?month=Icemoon">Icemoon</a>
-            <a href="/calendar?month=Waterfall">Waterfall</a>
-            <a href="/calendar?month=Earthdust">Earthdust</a>
-            <a href="/calendar?month=Lightstar">Lightstar</a>
-            <a href="/calendar?month=Firesun">Firesun</a>
-            <a href="/calendar?month=Thundersky">Thundersky</a>
-            <a href="/calendar?month=Windring">Windring</a>
-            <a href="/calendar?month=Darknight">Darknight</a>
+            <a href="/Barbs/Calendar?month=Icemoon">Icemoon</a>
+            <a href="/Barbs/Calendar?month=Waterfall">Waterfall</a>
+            <a href="/Barbs/Calendar?month=Earthdust">Earthdust</a>
+            <a href="/Barbs/Calendar?month=Lightstar">Lightstar</a>
+            <a href="/Barbs/Calendar?month=Firesun">Firesun</a>
+            <a href="/Barbs/Calendar?month=Thundersky">Thundersky</a>
+            <a href="/Barbs/Calendar?month=Windring">Windring</a>
+            <a href="/Barbs/Calendar?month=Darknight">Darknight</a>
         </div>
     </div>
 </div>
