--- a/html/templates/class.html
+++ b/html/templates/class.html
@@ -1,4 +1,4 @@
-<a id="class_{name}" href="/api#class_{name}" title="API usage"><h3>{name}</h3></a>
+<a id="class_{name}" href="/Barbs/API#class_{name}" title="API usage"><h3>{name}</h3></a>
 
 <p><b><u>Requirements</u></b></p>
 <ul>
