--- a/html/templates/rulebook.html
+++ b/html/templates/rulebook.html
@@ -24,7 +24,7 @@
 <div class="grid-container">
 	<div id="sidebar" class="sidenav">
 		<a href="#Foreword">Foreword</a>
-		<a href="/api">Barbs API Usage</a>
+		<a href="/Barbs/API">Barbs API Usage</a>
 		<a href="#Setting">Setting</a>
 		<div class="sidenav-subsection">
 			<a href="#Gods">Gods</a>
